--- a/assets/sass/wrappers.sass
+++ b/assets/sass/wrappers.sass
@@ -402,6 +402,7 @@ nav
     margin-top: 0
 
   &--w-sm
+    min-width: 200px
     max-width: 300px
     width: 100%
 
@@ -431,6 +432,8 @@ nav
 .demo_cta__wrapper
   display: flex
   align-items: center
+  flex-wrap: wrap
+  justify-content: center
   .demo-link
     margin-left: $spacing-md
     margin-bottom: -2px
@@ -439,7 +442,6 @@ nav
     margin-top: $spacing-md
     .secondary
       margin-left: 0
-      margin-top: $spacing-md
     .demo-link
       margin-left: 0
       margin-top: $spacing-md
@@ -474,9 +476,10 @@ nav
   right: 0
   left: 0
   overflow: hidden
-  width: 120%
-  height: 120%
-  margin: -400px -10%
+  width: 100%
+  height: 100%
+  margin: -400px 0%
+  box-sizing: content-box
   .bg-shadow__container
     position: absolute
     bottom: 400px
